src/main/java/com/example/fas/exceptions/user/invalid/FirstNameInvalidException.java
package com.example.fas.exceptions.user.invalid;

public class FirstNameInvalidException extends RuntimeException {
    public FirstNameInvalidException(String message) {
        super(message);
    }
}
